[package]
name = "dhcprs"
version = "0.1.1"
edition = "2021"
description = "A library for encoding and decoding DHCP/BOOTP packets"
license-file = "LICENSE"
repository = "https://github.com/xnoe/dhcprs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dhcprs"
path = "src/lib.rs"

[dependencies]
eui48 = "1.1.0"